--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  text-align: center;
+  /* text-align: center; */
 }
 
 :root {
