--- a/src/index.css
+++ b/src/index.css
@@ -52,9 +52,12 @@ body {
   /* background-image: url(../src/assets/blob.svg); */
 }
 
+/*-------------------General Styling--------------------*/
+
 .container {
   width: var(--container-width-lg);
   margin: 0 auto;
+  /* border: 5px solid red; */
 }
 
 h1,
@@ -71,7 +74,7 @@ h1 {
 
 section {
   margin-top: 8rem;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 section > h2,
@@ -92,8 +95,8 @@ section > h2 {
 a {
   color: var(--color-text);
   transition: var(--transition);
-  font-size: 1rem;
-  margin: 0.1rem;
+  /* font-size: 1rem;
+  margin: 0.1rem; */
 }
 
 a:hover {
@@ -114,7 +117,7 @@ a:hover {
 .btn:hover {
   background: var(--color-bg-variant);
   color: var(--color-bg);
-  border: transparent;
+  border-color: transparent;
 }
 
 .btn-primary {
