--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -26,10 +26,10 @@
 }
 
 .about__me-image:hover {
-  transform: rotate(0);
+  transform: rotate(10deg);
 }
 
-.about_cards {
+.about__cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1.5rem;
@@ -59,7 +59,7 @@
 }
 
 .about__card h5 {
-  font-size: 0.5rem;
+  font-size: 0.95rem;
 }
 
 .about__card small {
