--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,24 +1,12 @@
-.profile-pic {
-  background: #718e7459;
-
-  width: 22rem;
-  height: 22rem;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  border-radius: 60px;
-  overflow: hidden;
-  padding: 4.5rem;
-  rotate: -4deg;
-  border: red solid 5px;
-}
-
 header {
   height: 100vh;
   padding-top: 7rem;
   overflow: hidden;
+}
+
+img {
+  height: 100%;
+  width: 100%;
 }
 
 .header__container {
@@ -33,6 +21,8 @@ header {
   gap: 1.2rem;
   justify-content: center;
 }
+
+/*--------------------Some Bar on left--------------------*/
 
 .header__some {
   display: flex;
@@ -57,6 +47,23 @@ header {
   background: white;
 } */
 
+/*------------------Profile Pic --------------------*/
+
+.profile-pic {
+  background: #718e7459;
+
+  width: 22rem;
+  height: 30rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  border-radius: 12rem 12rem 12rem 12rem;
+  overflow: hidden;
+  padding: 5rem 3.5rem 6rem 3.5rem;
+}
+
 /*-----------------------Media Queries Medium---------------*/
 @media screen and (max-width: 1024px) {
   header {
@@ -69,8 +76,7 @@ header {
   header {
     height: 100vh;
   }
-  .header__some,
-  .scroll__down {
+  .header__some {
     display: none;
   }
 }
