--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ h1 {
 
 section {
   margin-top: 8rem;
-  /* height: 100vh; */
+  height: 100vh;
 }
 
 section > h2,
@@ -129,7 +129,6 @@ img {
   display: block;
   width: 100%;
   object-fit: cover;
-  border: #124559 1rem double;
 }
 
 /*///////////////// Media Queries///////////////////*/
