--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -60,8 +60,18 @@ img {
   margin-top: 4rem;
   margin-bottom: 2rem;
   border-radius: 12rem 12rem 12rem 12rem;
+
   overflow: hidden;
   padding: 5rem 3.5rem 6rem 3.5rem;
+}
+
+.profile-pic img {
+  border: 2px double var(--color-header);
+  border-radius: 3rem;
+  padding: 1rem;
+
+  display: flex;
+  align-content: center;
 }
 
 /*-----------------------Media Queries Medium---------------*/
