--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -5,7 +5,7 @@
 }
 
 .experience__container > div {
-  background: var(--color-bg-variant);
+  background: #718e7459;
   padding: 2.5rem 5rem;
   border-radius: 2rem;
   border: 1px solid transparent;
