--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -39,3 +39,31 @@
   gap: 1rem;
   margin-bottom: 0.8rem;
 }
+
+.service__list-icon {
+  color: var(--color-header);
+  margin-top: 6px;
+}
+
+.service__list p {
+  font-size: 0.9rem;
+}
+
+/*-----------------------Media Queries Medium---------------*/
+@media screen and (max-width: 1024px) {
+  .services__container {
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+  }
+  .service {
+    height: auto;
+  }
+}
+
+/*-----------------------Media Queries Small---------------*/
+@media screen and (max-width: 600px) {
+  .services__container {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
+}
