--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -40,7 +40,7 @@
 
 .about__card {
   background: #718e7459;
-  border: 1px solid transparent;
+  border: 1px solid var(--color-header);
   border-radius: 1rem;
   padding: 2rem;
   text-align: center;
@@ -50,7 +50,7 @@
 .about__card:hover {
   background: transparent;
   border-color: #718e74;
-  cursor: pointer;
+  cursor: text;
 }
 
 .about__icon,
