--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -8,14 +8,14 @@
   background: #718e7459;
   padding: 2.5rem 5rem;
   border-radius: 2rem;
-  border: 1px solid transparent;
+  border: 1px solid var(--color-header);
   transition: var(--transition);
 }
 
 .experience__container > div:hover {
   background: transparent;
-  border-color: var(--color-header);
-  cursor: pointer;
+  border-color: var(--color-bg-variant);
+  cursor: text;
 }
 
 .experience__container > div h3 {
