--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -76,6 +76,25 @@
   text-align: center;
 }
 
+.about__pitch {
+  color: #e7a52bb7;
+  background: var(--color-container);
+  font-size: 2rem;
+  font-style: italic;
+  font-weight: 100;
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  margin-bottom: 4rem;
+  padding: 4rem 8rem;
+  border: 1px solid var(--color-header);
+  border-radius: 1rem;
+}
+
+.contact-btn {
+  display: flex;
+  justify-content: center;
+}
+
 /*-----------------------Media Queries Medium---------------*/
 @media screen and (max-width: 1024px) {
   .about__container {
