fix media queries

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -110,6 +110,11 @@
   .about__content p {
     margin: 1rem 0 1.5rem;
   }
+
+  .about__pitch {
+    width: 50%;
+    margin: 2rem auto 4rem;
+  }
 }
 
 /*-----------------------Media Queries Small---------------*/
@@ -127,5 +132,10 @@
   }
   .about__content p {
     margin: 1.5rem 0;
+  }
+
+  .about__pitch {
+    width: 65%;
+    margin: 0 auto 3rem;
   }
 }
