--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -14,6 +14,7 @@
 .contact__option {
   background: #718e7459;
   padding: 1.2rem;
+  margin-bottom: 0.5rem;
   border-radius: 1.2rem;
   text-align: center;
   border: 1px solid var(--color-header);
@@ -33,7 +34,13 @@
 .contact__option a {
   margin-top: 0.7rem;
   display: inline-block;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
+  color: black;
+  border: 1px solid var(--color-header);
+  border-radius: 1rem;
+  padding: 0.4rem;
+  font-weight: bold;
+  font-style: initial;
 }
 
 /*----------------------Fomrs-------------------------*/
