--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,7 @@ header {
 
 .header__container {
   text-align: center;
-  height: 100%;
+  height: 100vh;
   position: relative;
 }
 
@@ -75,11 +75,17 @@ header {
   header {
     height: 68vh;
   }
+  .header__container {
+    height: 100vh;
+  }
 }
 
 /*-----------------------Media Queries Small---------------*/
 @media screen and (max-width: 600px) {
   header {
+    height: 100vh;
+  }
+  .header__container {
     height: 100vh;
   }
   .header__some {
