--- a/src/components/instagram/instagram.css
+++ b/src/components/instagram/instagram.css
@@ -1,3 +1,5 @@
+/*This is only css for the insta-components*/
+
 .instagram__container {
   background: transparent;
   /* border: 2px solid red; */
